<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateGroup">

    <TextView
            android:text="Create User Group"
            android:layout_width="312dp"
            android:layout_height="40dp"
            android:id="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAlignment="center" android:textSize="24sp" android:textColor="#00BCD4"/>
    <EditText
            android:id="@+id/groupNameEditText"
            android:hint="@string/group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.179"/>
    <EditText
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groupNameEditText"
            android:hint="@string/password"
            android:id="@+id/groupPwEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/submitButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/groupPwEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/submit" android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>