<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
            android:text="Log In"
            android:layout_width="312dp"
            android:layout_height="40dp"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textAlignment="center" android:textSize="24sp" android:textColor="#00BCD4"/>
    <EditText
            android:id="@+id/emailEditText2"
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:id="@+id/passwordEditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText2"
            android:layout_marginTop="36dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="textPassword" app:layout_constraintHorizontal_bias="0.0"/>

    <Button style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/submitButton2"
            android:text="@string/submit"
            android:layout_height="56dp"
            android:layout_width="184dp"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>